[gd_scene load_steps=4 format=3 uid="uid://ctypv31rtdp2h"]

[ext_resource type="Script" uid="uid://dogavhtvi42ls" path="res://scenes/Menu/egg_hatch.gd" id="1_xt4sw"]
[ext_resource type="Texture2D" uid="uid://dsfjucjtsk3kt" path="res://assets/sprites/T/#0000/TamaiEgg0.png" id="2_g284f"]
[ext_resource type="Texture2D" uid="uid://55k0ul0iw4jk" path="res://assets/sprites/T/#0000/TamaiCrackedEgg0.png" id="3_1p643"]

[node name="EggHatch" type="CanvasLayer"]
script = ExtResource("1_xt4sw")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48452926, 0.48452926, 0.58383155, 1)

[node name="InstructionLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 200.0
offset_right = 138.0
offset_bottom = 260.0
grow_horizontal = 2
text = "Click to hatch!"
horizontal_alignment = 1

[node name="EggSprite" type="Sprite2D" parent="."]
position = Vector2(369, 822)
scale = Vector2(15, 16.533)
texture = ExtResource("2_g284f")

[node name="CrackedEggSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(369.00003, 712.00006)
scale = Vector2(15, 15)
texture = ExtResource("3_1p643")
